fix text visibility for sunday time

--- a/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.scss
+++ b/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.scss
@@ -28,7 +28,7 @@ $day-colors: (
   ),
   sunday: (
     var(--primary-text),
-    var(--primary-text),
+    var(--primary-text-two),
   ),
 );
 
